Fix the way <title> is read under <use> shadow tree

Earlier there was no way <title> element could be read under <use> shadow
tree. By implementing title() override in SVGUseElement we return first <title> child under <use> if there is any.
Otherwise we return the first <title> child from the shadow tree instance under <use>.

BUG=619073

Review-Url: https://codereview.chromium.org/2706583002
Cr-Commit-Position: refs/heads/master@{#454683}

Former-commit-id: 58b15addedd3cb872fedf1d7a9c88fce8c35e0de